fixed attribute value editing in pretty remix mode on firefox.

--- a/static-files/easy-remix-dialog/hierarchic-source-code.css
+++ b/static-files/easy-remix-dialog/hierarchic-source-code.css
@@ -10,8 +10,12 @@ div.element {
   word-wrap: break-word;
 }
 
-div.element div.name, div.element div.value {
+div.element div.name {
   display: inline;
+}
+
+div.element div.value {
+  display: inline-block;
 }
 
 li > div.element {
